test_programs/compile_failure/noirc_frontend_tests_enums_missing_cases_with_empty_match/src/main.nr

        fn main() {
            match Abc::A {}
        }

        enum Abc {
            A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z
        }
    